src/k8s/bases/pihole/headless-service.yml
# Headless service for K3S metrics. No selector
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
