src/k8s/bases/pihole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui-svc
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "pihole-svc"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "false"
spec:
  sessionAffinity: ClientIP
  ports:
    - name: 80-tcp
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-0-ui-svc
spec:
  ports:
    - name: 80-tcp
      port: 80
  selector:
    "statefulset.kubernetes.io/pod-name": pihole-0
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-svc
spec:
  type: ClusterIP
  clusterIP: 10.43.100.30
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
spec:
  ports:
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: ${CLUSTER_HOSTNETWORKINGIPADDRESS}
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
spec:
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: ${CLUSTER_HOSTNETWORKINGIPADDRESS}
